[project]
name = "guardrailctl"
version = "0.1.0"
description = "Installer & deployment helper for Guardrail API (Enterprise & Core)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "requests>=2.32", "PyYAML>=6.0", "jinja2>=3.1"]
[project.scripts]
guardrailctl = "guardrailctl.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["requests", "typer", "yaml", "jinja2"]
ignore_missing_imports = true
